# Calendar-and-Clock

./: Calendar.sln  README.md  id.pub  id.pub.pub  id_rsa  id_rsa.pub
Calendar/: Calendar.vcxproj  Calendar.vcxproj.filters  calendar.cpp  calendar.hpp  calendar_login.cpp  calendar_login.hpp  digital_clock.cpp  digital_clock.hpp  main.cpp  state.hpp  timer.cpp  timer.hpp  user_data.txt
Calendar/x64/Debug/: Calendar.exe.recipe  Calendar.ilk  main.obj.enc  vc143.idb
Calendar/x64/Debug/Calendar.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Calendar.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Calendar_Clock/: CMakeLists.txt
Calendar_Clock/docs/UML/: alarm.puml  calendar.puml  digital_clock.puml  timer.puml
Calendar_Clock/header/: alarm.hpp  calendar.hpp  calendar_login.hpp  digital_clock.hpp  state.hpp  timer.hpp
Calendar_Clock/src/: alarm.cpp  calendar.cpp  calendar_login.cpp  digital_clock.cpp  main.cpp  timer.cpp
x64/Debug/: Calendar.exe.recipe  Calendar.ilk  vc143.idb
x64/Debug/Calendar.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Calendar.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
